# MeTTa-KG

./: .gitignore  Dockerfile  Dockerfile.binary  Dockerfile.mork  README.md  cargo-dist.toml  dist-workspace.toml  docker-compose.yml  flake.nix
.github/: env
.github/workflows/: ci.yml  docker-publish.yml  mork-upload.yml  pre-pr.yml  release.yml
api/: Cargo.toml  README.md  Rocket.toml  build.rs
api/.cargo/: config.toml
api/src/: cli.rs  db.rs  lib.rs  main.rs  mork_api.rs  static_files.rs
api/src/routes/: mod.rs  spaces.rs  translations.rs
api/tests/integrations/: common.rs  test_clear.rs  test_explore.rs  test_export.rs  test_import.rs  test_read.rs  test_transform.rs  test_upload.rs
frontend/: package-lock.json  vite.config.mts
frontend/src/: index.tsx  urls.ts
frontend/src/components/common/: nameSpace.tsx
frontend/src/components/space/: SpaceGraph.tsx
frontend/src/lib/: api.ts  state.ts
frontend/src/pages/: Load.tsx  Transform.tsx  Upload.tsx  index.tsx
frontend/src/pages/load/: Load.tsx
