[package]
name = "metta-kg"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[package.metadata.dist]
# Declare that this is the app we want to ship with cargo-dist
preferred-package = true

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
async-stream = "0.3"
rocket = { version = "0.5.1", features = ["json"] }
diesel = { version = "2.2.2", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"
uuid = { version = "1.10.0", features = ["v4"] }
rocket_cors = "0.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.10.6"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2.1.3"
openssl = { version = "0.10.72", features = ["vendored"] }
pq-sys = { version = "0.6", features = ["bundled"] }
url = "2.5.4"
clap = { version = "4.5.20", features = ["derive"] }
rust-embed = "8.4.0"
mime_guess = "2.0.4"
open = "5.1.4"
futures = "0.3"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1"

[dev-dependencies]
httpmock = "0.7.0"
tokio = { version = "1.38.0", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
